--- a/app/views/pages/user_show.html.erb
+++ b/app/views/pages/user_show.html.erb
@@ -1,4 +1,8 @@
 <h1>User view </h1>
 <p>id = <%= @user.id %></p>
 <p>email = <%= @user.email %></p>
-
+<ul>
+  <% @user_items.each do |item| %>
+    <li><%= item.title %> - <%= item.user_id %></li>
+  <% end %>
+</ul>
