basic index page added

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,23 @@
-<div
-  id="map"
-  style="width: 100%;
-  height: 600px;"
-  data-markers="<%= @markers.to_json %>"
-  data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-></div>
+<div class= "page-grid">
+  <div class="card-grid">
+    <% @items.each do |item| %>
+      <div class="cards">
+        <figure>
+          <img class="card-image" src="<%= item.photo %>" alt="">
+        </figure>
+              <div class="card-product-infos">
+                <h5 class="title-index"><%= link_to item.title, item_path(item) %></h5>
+                <%= item.description %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
+
+  <div
+    id="map"
+    style="width: 100%;
+    height: 600px;"
+    data-markers="<%= @markers.to_json %>"
+    data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+  ></div>
