--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,10 +1,9 @@
 .footer {
-  background: #F4F4F4;
+  background: #51C96C;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
-  padding: 0px 50px;
+  padding: 16px 48px;
   color: rgba(0,0,0,0.3);
 }
 .footer-links {
@@ -12,15 +11,21 @@
   align-items: center;
 }
 .footer-links a {
-  color: black;
-  opacity: 0.15;
+  color: white;
+  opacity: 0.9;
   text-decoration: none;
   font-size: 24px;
   padding: 0px 10px;
 }
+
 .footer-links a:hover {
   opacity: 1;
 }
 .footer .fa-heart {
   color: #D23333;
+}
+
+.footer-copyright {
+  color: white;
+  font-weight: lighter;
 }
