--- a/app/views/pages/user_show.html.erb
+++ b/app/views/pages/user_show.html.erb
@@ -3,6 +3,16 @@
 <p>email = <%= @user.email %></p>
 <ul>
   <% @user_items.each do |item| %>
-    <li><%= item.title %> - <%= item.user_id %></li>
+    <li class="item-li"><%= link_to item.title, item_path(item) %> - <%= item.user_id %>
+      <span>
+        <button type="button" class="btn btn-info btn-sm item-btn">
+          <%= link_to "Edit item", edit_item_path(item) %>
+        </button>
+        <button type="button" class="btn btn-danger btn-sm item-btn">
+          <%= link_to "Delete", item_path(item),
+          method: :delete,
+          data: { confirm: "Are you sure?" } %>
+        </button></span>
+    </li>
   <% end %>
 </ul>
