small changes at logo

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="banner-navbar">
-  <%= image_tag 'logo4.png', class: "logo-bordered" %>
+  <%= image_tag 'logo3.jpg', class: "logo-bordered" %>
   <%= image_tag "https://kitt.lewagon.com/placeholder/users/sarahlafer", class: "avatar-bordered", alt: "avatar-bordered" %>
 </div>
 <div class="banner">
