order work and flatpickr work in progress

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -3,6 +3,13 @@
 <p><%= @item.description %></p>
 <p><%= cl_image_tag @item.photo, height: 300, width: 400, crop: :fill %></p>
 
+<%= simple_form_for @order do |f| %>
+  <%= f.input :item_id, as: :hidden, input_html: { value: @item.id } %>
+  <%= f.input :start_time, as: :string, required: false, input_html: {class: "datepicker"} %>
+  <%= f.input :end_time, as: :string, required: false, input_html: {class: "datepicker"} %>
+  <%= submit_tag 'Reserve Item (and maybe pay deposit?)', class: 'btn btn-primary' %>
+<% end %>
+
 
 <%= link_to "Edit item", edit_item_path %>
     <%= link_to "Delete", item_path(@item),
