--- a/app/assets/stylesheets/pages/_skeleton.scss
+++ b/app/assets/stylesheets/pages/_skeleton.scss
@@ -6,4 +6,25 @@
 
 .main-content {
   flex: 1;
+  padding: 7%;
+}
+
+.buttom-button {
+  text-align: center;
+  padding-top: 24px;
+
+}
+.btn-gradient {
+  color: white;
+  padding: 8px 24px;
+  border-radius: 4px;
+  font-weight: bold;
+  background: #51C96C;
+  transition: background 0.3s ease;
+  border: 1px solid #51C96C;
+}
+
+.btn-gradient:hover {
+  background: #51aec9;
+  color: white;
 }
