--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<h2>Last items added:</h2>
+<h2>Recommended for you</h2>
 <%= render "shared/grid-cards" %>
   <div class="buttom-button">
 <%= link_to "See all items", "#", class: "btn btn-gradient" %>
