--- a/app/assets/stylesheets/components/_grid-cards.scss
+++ b/app/assets/stylesheets/components/_grid-cards.scss
@@ -9,14 +9,25 @@
   font-size: 24px;
   font-weight: bold;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  border-radius: 5px;
+  border-radius: 5px 5px 0px 0px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+}
+
+.card {
+  border-radius: 5px;
 }
 
 .cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 20px;
+}
+
+.card-info {
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 // Smallest device
