--- a/app/views/shared/_grid-cards.html.erb
+++ b/app/views/shared/_grid-cards.html.erb
@@ -1,7 +1,13 @@
 <div class="cards">
   <% @items.each do |item| %>
-    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
-      <%= item.title %>
+    <div class="card">
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+      </div>
+      <div class="card-info">
+        <span><%= item.title %></span>
+        <span><%= item.address %></span>
+      </div>
     </div>
+
   <% end %>
 </div>
