--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,10 +7,11 @@
     <h1><strong>Street Share</strong></h1>
     <p>Easily find and borrow items that you need</p>
     <%= simple_form_for :search, url: items_path, method: :get, html: {class: 'form-inline'} do |f| %>
-      <div class="search-form-control form-group">
+    <!-- search-form-control form-group -->
+      <div class="search-form-control">
         <input class="form-control string required" type="text" name="search[query]" id="search_query" placeholder="ex: bike, barbeque" />
-        <input class="form-control string required" type="text" name="search[location]" id="search_location" placeholder="ex: Location" />
-        <button name="button" type="submit" class="btn btn-flat">
+        <input class="form-control string required w-100" type="text" name="search[location]" id="search_location" placeholder="ex: Location" />
+        <button name="button" type="submit" class="btn btn-flat search-btn">
           <i class="fas fa-search"></i> Search
         </button>
       </div>
