--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,15 +6,17 @@
   <div class="container header-container">
     <h1><strong>Street Share</strong></h1>
     <p>Easily find and borrow items that you need</p>
+
     <%= simple_form_for :search, url: items_path, method: :get, html: {class: 'form-inline'} do |f| %>
       <div class="search-form-control form-group">
-        <input class="form-control string required" type="text" name="search[query]" id="search_query" placeholder="ex: bike, barbeque" />
-        <input class="form-control string required" type="text" name="search[location]" id="search_location" placeholder="ex: Location" />
+        <input class="form-control string required" type="text" name="search[query]" id="search_query" placeholder="ex: bike, barbeque" required />
+        <input class="form-control string required" type="text" name="search[location]" id="search_location" placeholder="ex: Location" required />
         <button name="button" type="submit" class="btn btn-flat">
           <i class="fas fa-search"></i> Search
         </button>
       </div>
     <% end %>
+
   </div>
 </div>
 
