--- a/app/views/pages/user_show.html.erb
+++ b/app/views/pages/user_show.html.erb
@@ -1,9 +1,11 @@
 <h1>User view </h1>
 <h3>Hi <%= @user.email %> (id: <%= @user.id %>)</h3>
+<br />
+<h2 class="user-items">Your items:</h2>
 <% @user_items.each do |item| %>
   <%= link_to item_path(item), :action => 'go' do %>
     <div class="item-li">
-      <%= render partial: "shared/card", object: item %>
+      <%= render partial: "shared/card", object: item, locals: {item_div: true} %>
       <span>
         <button type="button" class="btn btn-info btn-sm item-btn">
           <%= link_to "Edit item", edit_item_path(item) %>
@@ -14,6 +16,16 @@
           data: { confirm: "Are you sure?" } %>
         </button>
       </span>
+    </div>
+  <% end %>
+<% end %>
+
+<br />
+<h2 class="user-orders">Your orders:</h2>
+<% @user_orders.each do |order| %>
+  <%= link_to order_path(order), :action => 'go' do %>
+    <div class="item-li">
+      <%= render partial: "shared/card", object: order, locals: {order_div: true}  %>
     </div>
   <% end %>
 <% end %>
