--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -1,8 +1,16 @@
 <div class="card-product">
   <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
   <div class="card-product-infos">
-    <h2><%= card.title %></h2>
-    <p><%= card.description %></p>
-    <p>user: <%= card.user_id %> (remove for prod)</p>
+    <!-- if card is an item card -->
+    <% if local_assigns[:item_div] %>
+      <h2><%= card.title %></h2>
+      <p><%= card.description %></p>
+      <p>user: <%= card.user_id %> (remove for prod)</p>
+    <!-- if card is an order card -->
+    <% elsif local_assigns[:order_div] %>
+      <h2>Item: <%= card.item_id %></h2>
+      <p>Status: <%= card.state %></p>
+      <p>Amount: <%= humanized_money_with_symbol(card.amount) %></p>
+    <% end %>
   </div>
 </div>
