--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,25 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: $green;
 }
 
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
 }
-
+.navbar-lewagon {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+#colorwh {
+  font-size: 1.1em;
+  color: white;
+  }
 .navbar-lewagon .navbar-brand img {
   width: 40px;
+}
+
+#logo-street {
+  border-radius: 50%;
 }
