added changes for homepage, sign in/sign up/ log out, navbar changed

--- a/app/assets/stylesheets/components/_grid-cards.scss
+++ b/app/assets/stylesheets/components/_grid-cards.scss
@@ -1,5 +1,6 @@
 .card-category {
   background-size: cover;
+  // background-repeat: no-repeat;
   background-position: center;
   height: 180px;
   display: flex;
