--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <h2>Recommended for you</h2>
 <%= render "shared/grid-cards" %>
   <div class="buttom-button">
-<%= link_to "See all items", "#", class: "btn btn-gradient" %>
+<%= link_to "See all items", items_path, class: "btn btn-gradient" %>
   </div>
