--- a/app/views/shared/_grid-cards.html.erb
+++ b/app/views/shared/_grid-cards.html.erb
@@ -1,13 +1,14 @@
 <div class="cards">
   <% @items.each do |item| %>
-    <div class="card">
-      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+    <%= link_to item_path(item) do %>
+      <div class="card">
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path item.photo %>')">
+        </div>
+        <div class="card-info">
+          <span><%= item.title %></span>
+          <span><%= item.address %></span>
+        </div>
       </div>
-      <div class="card-info">
-        <span><%= item.title %></span>
-        <span><%= item.address %></span>
-      </div>
-    </div>
-
+    <% end %>
   <% end %>
 </div>
