--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -2,9 +2,12 @@
   <div class="row">
     <div class="col-sm-4 offset-sm-4">
       <%= simple_form_for @item do |f| %>
-        <%= f.input :title %>
-        <%= f.input :description %>
-        <%= f.input :photo %>
+        <%= f.input :title, label: 'Please add a title for the item listing' %>
+        <%= f.input :description, label: 'Please add a detailed description of the item'%>
+        <p>Please select an item category</p>
+        <%= f.association :category %>
+        <%= f.input :price, label: 'Security deposit required? (enter 0.00 if being given for free)'%>
+        <%= f.input :photo, label: 'Please add a photo of the item' %>
         <%= f.input :photo_cache, as: :hidden %>
         <%= f.button :submit %>
       <% end %>
