--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -3,11 +3,19 @@
 <p><%= @item.description %></p>
 <p><%= cl_image_tag @item.photo, height: 300, width: 400, crop: :fill %></p>
 
+<h2>Request item or request to borrow item</h2>
+<h2>Is item free? No need for dates</h2>
+<%= simple_form_for @order do |f| %>
+  <%= f.input :item_id, as: :hidden, input_html: { value: @item.id } %>
+  <%= submit_tag 'Reserve Item with owner', class: 'btn btn-primary' %>
+<% end %>
+
+<h2>Need to check here if deposit for item is 0.00? Need dates if borrowing</h2>
 <%= simple_form_for @order do |f| %>
   <%= f.input :item_id, as: :hidden, input_html: { value: @item.id } %>
   <%= f.input :start_time, as: :string, required: false, input_html: {class: "datepicker"} %>
   <%= f.input :end_time, as: :string, required: false, input_html: {class: "datepicker"} %>
-  <%= submit_tag 'Reserve Item (and maybe pay deposit?)', class: 'btn btn-primary' %>
+  <%= submit_tag 'Reserve Item and pay deposit?', class: 'btn btn-primary' %>
 <% end %>
 
 
