--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: $green;
-      z-index: 2;
+  z-index: 2;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -12,6 +12,7 @@
   top: 0;
   left: 0;
   width: 100%;
+  opacity: 0.9;
 }
 #colorwh {
   font-size: 1.1em;
