--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,7 +9,14 @@
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
-
+    <%= f.input :first_name,
+                hint: "leave it blank if you don't want to change it",
+                required: false,
+                autofocus: true %>
+    <%= f.input :last_name,
+                hint: "leave it blank if you don't want to change it",
+                required: false,
+                autofocus: true %>
     <%= f.input :password,
                 hint: "leave it blank if you don't want to change it",
                 required: false,
@@ -21,6 +28,10 @@
                 hint: "we need your current password to confirm your changes",
                 required: true,
                 input_html: { autocomplete: "current-password" } %>
+    <%= f.input :address,
+                hint: "leave it blank if you don't want to change it",
+                required: false,
+                autofocus: true %>
   </div>
 
   <div class="form-actions">
