--- a/app/views/reviews/create.js.erb
+++ b/app/views/reviews/create.js.erb
@@ -2,11 +2,11 @@
   var reviews = document.querySelector('#item-review-list')
   reviews.insertAdjacentHTML('beforeend', newReview)
 
-  var inputBox = document.querySelector('.review-title')
+  var inputBox = document.getElementById('review_title')
   inputBox.value = '';
 
-  var inputBox = document.querySelector('.review-rating')
+  var inputBox = document.getElementById('review_rating')
   inputBox.value = '';
 
-  var inputBox = document.querySelector('.review-body')
+  var inputBox = document.getElementById('review_body')
   inputBox.value = '';
