--- a/app/assets/stylesheets/components/_grid-cards.scss
+++ b/app/assets/stylesheets/components/_grid-cards.scss
@@ -22,13 +22,23 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 20px;
+  margin-bottom: 4%;
 }
 
 .card-info {
   height: 60px;
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
+
+  span i {
+    color: #e7e713;
+  }
+}
+
+.card-link {
+  text-decoration: none !important;
 }
 
 // Smallest device
