--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,64 +1,86 @@
-<h1>Item Show Page</h1>
-<h2><%= @item.title %></h2>
-<p><%= @item.description %></p>
-<p><%= cl_image_tag @item.photo, height: 300, width: 400, crop: :fill %></p>
-
-<h2>Request item or request to borrow item</h2>
-<h2>Is item free? No need for dates</h2>
-<%= simple_form_for @order do |f| %>
-  <%= f.input :item_id, as: :hidden, input_html: { value: @item.id } %>
-  <%= submit_tag 'Reserve Item with owner', class: 'btn btn-primary' %>
-<% end %>
-
-<h2>Need to check here if deposit for item is 0.00? Need dates if borrowing</h2>
-<%= simple_form_for @order do |f| %>
-  <%= f.input :item_id, as: :hidden, input_html: { value: @item.id } %>
-  <%= f.input :start_time, as: :string, required: false, input_html: {class: "datepicker"} %>
-  <%= f.input :end_time, as: :string, required: false, input_html: {class: "datepicker"} %>
-  <%= submit_tag 'Reserve Item and pay deposit?', class: 'btn btn-primary' %>
-<% end %>
-
-
-<%= link_to "Edit item", edit_item_path %>
-    <%= link_to "Delete", item_path(@item),
-      method: :delete,
-      data: { confirm: "Are you sure?" } %>
-<%= link_to "Back to items list index", items_path %></p>
-
-<div class="container" id="item-review-list">
-  <h2 class ="h1_text_pages">Reviews & Comments</h2>
-    <% @item.reviews.each do |review| %>
-      <div class="review-title">
-        <div class="review-title">
-          <%= review.title %>
-        </div>
-      </div>
-      <div class="review-container">
-        <div class="review-rating">
-          <%= review.rating %>
-        </div>
-        <div class="review-body">
-          "<%= review.body %>"
-        </div>
-      </div>
-    <% end %>
-</div>
-
 <div class="container">
-  <div class="row">
-    <div class="col-sm-4 offset-sm-4 h1_text_pages">
+<div class="item-container-top">
+  <p><%= link_to "< Back to items list", items_path,class: "links_text_pages" %></p>
+  <h2 class="text-inline h1_text_pages"><%= @item.title %></h2>
+  <div class="top-info">
+    <%= link_to "Edit item", edit_item_path %> |
+    <%= link_to "Delete", item_path(@item),
+     method: :delete,
+     data: { confirm: "Are you sure?" } %>
+  </div>
+  <div class="photo-calendar">
+    <%= cl_image_tag @item.photo, height: 500, width: 550 %>
+    <div class="item-container-booking">
+      <!-- <button type="button" class="purple-button" data-toggle="modal" style="width: 200px;" data-target="#exampleModal">
+        Instant Book
+      </button> -->
 
-      <h1>Add a review</h1>
-
-      <%= simple_form_for [@item, @review], remote: true do |f| %>
-        <%= f.input :title %>
-        <%= f.input :body %>
-        <p>Rating</p>
-        <%= f.select :rating, [['Fabulous', 5],['Pretty neat', 4],['Definition of average', 3],['Poor (sad face)', 2],['Appalling',1,]] %>
-        <p></p>
-        <%= f.submit "Submit review" %>
-      <% end %>
-
+      <div>
+        <% if humanized_money(@item.price).to_i == 0 %>
+          <%= simple_form_for @order do |f| %>
+            <%= f.input :item_id, as: :hidden, input_html: { value: @item.id } %>
+            <%= submit_tag 'Reserve Item with owner', class: 'btn btn-primary' %>
+          <% end %>
+        <% else %>
+          <%= simple_form_for @order do |f| %>
+          <%= f.input :item_id, as: :hidden, input_html: { value: @item.id } %>
+          <%= f.input :start_time, as: :string, required: false, input_html: {class: "datepicker"} %>
+          <%= f.input :end_time, as: :string, required: false, input_html: {class: "datepicker"} %>
+          <%= submit_tag 'Reserve Item and pay deposit?', class: 'btn btn-primary' %>
+          <% end %>
+        <% end %>
+      </div>
     </div>
   </div>
+
+  <div class="description-container">
+    <p class="links_text_pages_p"><%= @item.address %></p>
+    <h4>Description</h4>
+    <p><%= @item.description %></p>
+  </div>
+  <hr>
+</div>
+
+
+
+  <div
+    id="map"
+    style="width: 100%;
+    height: 600px;"
+    data-markers="<%= @markers.to_json %>"
+    data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+  ></div>
+
+<div class="container" id="item-review-list">
+ <h2 class ="h1_text_pages">Reviews & Comments</h2>
+   <% @item.reviews.each do |review| %>
+     <div class="review-title">
+       <div class="review-title">
+         <%= review.title %>
+       </div>
+     </div>
+     <div class="review-container">
+       <div class="review-rating">
+         <%= review.rating %>
+       </div>
+       <div class="review-body">
+         "<%= review.body %>"
+       </div>
+     </div>
+   <% end %>
+</div>
+<div class="container">
+ <div class="row">
+   <div class="col-sm-4 offset-sm-4 h1_text_pages">
+     <h1>Add a review</h1>
+     <%= simple_form_for [@item, @review], remote: true do |f| %>
+       <%= f.input :title %>
+       <%= f.input :body %>
+       <p>Rating</p>
+       <%= f.select :rating, [['Fabulous', 5],['Pretty neat', 4],['Definition of average', 3],['Poor (sad face)', 2],['Appalling',1,]] %>
+       <p></p>
+       <%= f.submit "Submit review" %>
+     <% end %>
+   </div>
+ </div>
 </div>
