--- a/app/views/shared/_grid-cards.html.erb
+++ b/app/views/shared/_grid-cards.html.erb
@@ -1,12 +1,18 @@
 <div class="cards">
   <% @items.each do |item| %>
-    <%= link_to item_path(item) do %>
+    <%= link_to item_path(item), class: "card-link" do %>
       <div class="card">
         <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path item.photo %>')">
         </div>
         <div class="card-info">
-          <span><%= item.title %></span>
           <span><%= item.address %></span>
+          <span><%= item.title %></span>
+          <span>
+            <% item.avg_rating.times do %>
+              <i class="fas fa-star"></i>
+            <% end  %>
+            <%= item.avg_rating %>
+          </span>
         </div>
       </div>
     <% end %>
