--- a/app/views/shared/_grid-cards.html.erb
+++ b/app/views/shared/_grid-cards.html.erb
@@ -1,5 +1,6 @@
+<%= will_paginate %>
 <div class="cards">
-  <% @items.each do |item| %>
+  <% @items_paginator.each do |item| %>
     <%= link_to item_path(item) do %>
       <div class="card">
         <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path item.photo %>')">
@@ -12,3 +13,4 @@
     <% end %>
   <% end %>
 </div>
+<%#= will_paginate %>
