just a little bit style changed

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background: #51C96C;
+  background: $green;
   display: flex;
   align-items: center;
   justify-content: space-between;
