font style changed for show page and grid margin changed

--- a/app/assets/stylesheets/components/_grid-cards.scss
+++ b/app/assets/stylesheets/components/_grid-cards.scss
@@ -31,6 +31,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  color: #303030;
 
   span i {
     color: #e7e713;
@@ -39,6 +40,7 @@
 
 .card-link {
   text-decoration: none !important;
+  margin: 0 !important;
 }
 
 // Smallest device
