--- a/app/assets/stylesheets/components/_item-list.scss
+++ b/app/assets/stylesheets/components/_item-list.scss
@@ -1,4 +1,11 @@
 
+a {
+  color: $dark-gray;
+  &:hover {
+    text-decoration: none;
+    color: black;
+  }
+}
 .item-container-booking {
   padding: 4%;
 }
