--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -13,7 +13,9 @@
     <%# end %>
   </div>
 </div> -->
+<div class="maping-container">
 <%= render "shared/grid-cards" %>
+<div class="mapper">
   <div
     id="map"
     style="width: 100%;
@@ -21,3 +23,5 @@
     data-markers="<%= @markers.to_json %>"
     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
   ></div>
+</div>
+</div>
