--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
 <div class="item-container-top">
-  <p><%= link_to "< Back to items list", items_path,class: "links_text_pages" %></p>
+  <%= link_to "< Back to items list", items_path,class: "links_text_pages" %>
+  <br>
   <h3 class="text-inline h1_text_pages"><%= @item.title %></h3>
   <div class="top-info">
     <%= link_to "Edit item", edit_item_path %> |
