--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,7 @@
 <h2>Recommended for you</h2>
-<%= render "shared/grid-cards" %>
+<% @items.each do |item| %>
+  <%= render "shared/grid-cards", item: item %>
+<% end %>
   <div class="buttom-button">
 <%= link_to "See all items", items_path, class: "btn btn-gradient" %>
   </div>
