logo changed and added hover, font changed for sign button on home page

--- a/app/assets/stylesheets/components/_grid-cards.scss
+++ b/app/assets/stylesheets/components/_grid-cards.scss
@@ -16,6 +16,11 @@
 
 .card {
   border-radius: 5px;
+  transition: 0.3s;
+  &:hover {
+    background: #ebebeb;
+    box-shadow: 4px 4px 11px rgba(0,0,0,0.2);
+  }
 }
 
 .cards {
