--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -60,6 +60,17 @@
 
 // }
 
+
+.white-links a {
+  font-size: 20px;
+  color: white ;
+  transition: 0.3s;
+  margin-right: 8px;
+  &:hover {
+    color: #ebebeb;
+  }
+}
+
 .search-form-control .form-control {
   height: 3.5rem;
   box-shadow: 0 2px 6px rgba(0,0,0,0.08);
