--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
-<div class="banner-navbar">
-  <%= image_tag 'logoz.png', class: "logo-bordered" %>
+<div class="banner-navbar white-links">
+  <%= image_tag 'logo237.png', class: "logo-bordered" %>
    <div>
     <% if user_signed_in? %>
       <%= link_to "Log out", destroy_user_session_path, method: :delete %>
