--- a/app/views/shared/_grid-cards.html.erb
+++ b/app/views/shared/_grid-cards.html.erb
@@ -16,8 +16,8 @@
   </div>
 <% end %>
 
-<!-- 
-<div class="cards">
+
+<!-- <div class="cards">
   <%# @items.each do |item| %>
     <%#= link_to item_path(item), class: "card-link" do %>
       <div class="card">
@@ -36,5 +36,5 @@
       </div>
     <%# end %>
   <%# end %>
-</div>
- -->
+</div> -->
+
