--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,9 @@
 <h2>Recommended for you</h2>
-<% @items.each do |item| %>
-  <%= render "shared/grid-cards", item: item %>
-<% end %>
-  <div class="buttom-button">
-<%= link_to "See all items", items_path, class: "btn btn-gradient" %>
-  </div>
+<div class="cards">
+  <% @items.each do |item| %>
+    <%= render "shared/grid-cards", item: item %>
+  <% end %>
+</div>
+<div class="buttom-button">
+  <%= link_to "See all items", items_path, class: "btn btn-gradient" %>
+</div>
