user page details

--- a/app/views/pages/user_show.html.erb
+++ b/app/views/pages/user_show.html.erb
@@ -32,7 +32,7 @@
       <div class="item-li">
         <%= render 'shared/card', order: order, user: order.item.user, order_div: true %>
       </div>
-    <% end %>
+    <% end %>, user: order.item.user,
   <% end %>
 </div>
 
