--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -1,5 +1,6 @@
 <div class="card-product">
-  <%= cl_image_tag item.photo %>
+  <%#= cl_image_path item_var.photo %>
+  <img src=<%= cl_image_path item_var.photo %> />
   <!-- <img sr=cin"https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" /> -->
   <div class="card-product-infos">
     <!-- if card is an item card -->
