--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <%= link_to root_path, class: "d-flex navbar-brand" do %>
-    <%= image_tag "logo237.png", id: "logo-street" %>
+    <%= image_tag "road-icon.png", id: "logo-street" %>
     <span class="nav-link" id="colorwh">Streetshare</span>
     <% end %>
 
