--- a/app/assets/stylesheets/components/_item-list.scss
+++ b/app/assets/stylesheets/components/_item-list.scss
@@ -65,15 +65,21 @@ input.btn-primary {
   padding: 8px 24px;
   border-radius: 4px;
   font-weight: bold;
-  background: linear-gradient($green, $green);
-  transition: background 0.3s ease;
+  background: $green;
+  transition: 0.3s;
   border: 1px solid $green;
   margin-bottom: 24px;
 }
 
 .btn-primary:hover {
-  background: green;
   color: white;
+  padding: 8px 24px;
+  border-radius: 4px;
+  font-weight: bold;
+  background: $green;
+  border: 1px solid $green;
+  margin-bottom: 24px;
+  opacity: 0.7;
 }
 
 // .btn-gradient {
