fix for index and show - some styling changes

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="banner-navbar white-links">
+<div class="banner-navbar">
   <%= image_tag 'road-icon.png', class: "logo-bordered" %>
    <div>
     <% if user_signed_in? %>
