--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -4,10 +4,12 @@
   <br>
   <h4 class="text-inline h1_text_pages"><%= @item.title %></h4>
   <div class="top-info">
-    <%= link_to "Edit item", edit_item_path %> |
-    <%= link_to "Delete", item_path(@item),
-     method: :delete,
-     data: { confirm: "Are you sure?" } %>
+    <% if @item.user_id == current_user.id %>
+      <%= link_to "Edit item", edit_item_path %> |
+      <%= link_to "Delete item", item_path(@item),
+       method: :delete,
+       data: { confirm: "Are you sure?" } %>
+     <% end %>
   </div>
   <div class="photo-calendar">
     <%= cl_image_tag @item.photo, height: 500, width: 550 %>
@@ -25,6 +27,7 @@
             <% end %>
           <% else %>
             <%= simple_form_for @order do |f| %>
+            <p><strong>How long would you like to borrow the item for?</strong></p>
             <%= f.input :item_id, as: :hidden, input_html: { value: @item.id } %>
             <%= f.input :start_time, as: :string, required: false, input_html: {class: "datepicker"} %>
             <%= f.input :end_time, as: :string, required: false, input_html: {class: "datepicker"} %>
@@ -40,6 +43,11 @@
     <p class="links_text_pages_p"><%= @item.address %></p>
     <h4>Description</h4>
     <p><%= @item.description %></p>
+    <% if humanized_money(@item.price).to_i == 0 %>
+      <p>Item is free to collect once the owner has accepted your reservation</p>
+    <% elsif %>
+      <p>Deposit required: £<%= humanized_money(@item.price) %></p>
+    <% end %>
   </div>
   <hr>
 </div>
