add-edit button made correct primary colour

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -9,7 +9,7 @@
         <%= f.input :price, label: 'Security deposit required? (enter 0.00 if being given for free)'%>
         <%= f.input :photo, label: 'Please add a photo of the item' %>
         <%= f.input :photo_cache, as: :hidden %>
-        <%= f.button :submit %>
+        <%= f.button :submit, class: 'btn btn-primary' %>
       <% end %>
     </div>
   </div>
