footer changes, form styling, changes to show page

--- a/app/assets/stylesheets/components/_item-list.scss
+++ b/app/assets/stylesheets/components/_item-list.scss
@@ -112,7 +112,7 @@ input.btn-primary {
   font-size: 50px;
   font-weight: bold;
   padding: 24px;
-  color: #8361C3;
+  color: #61CD7A;
 }
 
 .review-content {
