--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,4 +1,3 @@
-<h1 style='text-align: center;'>Edit an item</h1>
-<br>
-<br>
+<h1 style='text-align: center;'>Edit an item listing</h1>
+
 <%= render 'form' %>
