--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -65,37 +65,41 @@
   <hr>
   <br>
 
-<div class="container" id="item-review-list">
- <h3 class ="h1_text_pages">Reviews & Comments</h3>
-   <% @item.reviews.each do |review| %>
-     <div class="review-title">
-       <div class="review-title">
-         <%= review.title %>
+  <% unless @item.user_id == current_user.id %>
+    <div class="container" id="item-review-list">
+     <h3 class ="h1_text_pages">Reviews</h3>
+       <% @item.reviews.each do |review| %>
+         <div class="review-title">
+           <div class="review-title">
+             <%= review.title %>
+           </div>
+         </div>
+         <div class="review-container">
+           <div class="review-rating">
+             <%= review.rating %>
+           </div>
+           <div class="review-body d-flex align-items-center">
+             "<%= review.body %>"
+           </div>
+         </div>
+       <% end %>
+    </div>
+    <div class="container container-review">
+     <div class="row">
+       <div class="col-sm-4 h1_text_pages form-post">
+         <h4>Add a review for the item</h4>
+         <%= simple_form_for [@item, @review], remote: true do |f| %>
+           <%= f.input :title, label: 'Please add your title and name' %>
+           <%= f.input :body, label: 'Please add your review' %>
+           <p>Rating</p>
+           <%= f.collection_radio_buttons :rating, [['1', '1'] ,[2, '2'],[3, '3'],[4, '4'],[5, '5']], :first, :last %>
+           <p></p>
+           <%= f.submit "Submit review", class: 'btn btn-primary' %>
+         <% end %>
        </div>
      </div>
-     <div class="review-container">
-       <div class="review-rating">
-         <%= review.rating %>
-       </div>
-       <div class="review-body d-flex align-items-center">
-         "<%= review.body %>"
-       </div>
-     </div>
-   <% end %>
+    </div>
+  <% end %>
 </div>
-<div class="container container-review">
- <div class="row">
-   <div class="col-sm-4 h1_text_pages">
-     <h4>Add a review</h4>
-     <%= simple_form_for [@item, @review], remote: true do |f| %>
-       <%= f.input :title %>
-       <%= f.input :body %>
-       <p>Rating</p>
-       <%= f.select :rating, [['Fabulous', 5],['Pretty neat', 4],['Definition of average', 3],['Poor (sad face)', 2],['Appalling',1,]] %>
-       <p></p>
-       <%= f.submit "Submit review" %>
-     <% end %>
-   </div>
- </div>
-</div>
-</div>
+
+
