--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,5 +1,3 @@
-<h1 style='text-align: center;'>Add an item</h1>
-<br>
-<br>
+<h1 style='text-align: center;'>Create an item listing</h1>
 <%= render 'form' %>
 
