--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,12 @@
 
 <div class="footer-links">
+  <%= image_tag 'road-icon.png', class: "logo-footer" %>
   <a href="#"><i class="fab fa-instagram"></i></a>
   <a href="#"><i class="fab fa-facebook"></i></a>
   <a href="#"><i class="fab fa-twitter"></i></a>
 </div>
 <div class="footer-copyright">
-  © StreetShare , All rights reserved
+  © 2019 Streetshare.Club. All rights reserved. Peace out.
+    <a href="#"><i class="fas fa-hand-peace"></i></a>
 </div>
 
