--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="banner-navbar">
-  <%= image_tag 'road-icon.png', class: "logo-bordered" %>
+  <%= image_tag 'road-icon.png', class: "logo-footer" %>
    <div>
     <% if user_signed_in? %>
       <%= link_to "Account", user_show_path, id: "colorwh" %>
