--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -13,56 +13,52 @@
        <% end %>
      <% end %>
   </div>
-  <div class="photo-calendar">
-    <%= cl_image_tag @item.photo, height: 500, width: 550 %>
-    <div class="item-container-booking">
-      <!-- <button type="button" class="purple-button" data-toggle="modal" style="width: 200px;" data-target="#exampleModal">
-        Instant Book
-      </button> -->
 
-      <div>
-        <% unless @item.user == current_user %>
-          <% if humanized_money(@item.price).to_i == 0 %>
-            <%= simple_form_for @order do |f| %>
-              <%= f.input :item_id, as: :hidden, input_html: { value: @item.id } %>
-              <%= submit_tag 'Reserve Item with owner', class: 'btn btn-primary' %>
-            <% end %>
-          <% else %>
-            <%= simple_form_for @order do |f| %>
-            <p><strong>How long would you like to borrow the item for?</strong></p>
-            <%= f.input :item_id, as: :hidden, input_html: { value: @item.id } %>
-            <%= f.input :start_time, as: :string, required: false, input_html: {class: "datepicker"} %>
-            <%= f.input :end_time, as: :string, required: false, input_html: {class: "datepicker"} %>
-            <%= submit_tag 'Reserve item & pay deposit', class: 'btn btn-primary' %>
-            <% end %>
-          <% end %>
+  <div class="photo-calendar">
+    <div class="left-container">
+      <%= cl_image_tag @item.photo, height: 500, width: 500 %>
+      <div class="description-container">
+        <p class="links_text_pages_p"><%= @item.address %></p>
+        <h4>Description</h4>
+        <p><%= @item.description %></p>
+        <% if humanized_money(@item.price).to_i == 0 %>
+          <p>Item is free to collect once the owner has accepted your reservation</p>
+        <% elsif %>
+          <p>Deposit required: £<%= humanized_money(@item.price) %></p>
         <% end %>
       </div>
     </div>
+    <div class="right-container">
+        <div
+          id="map"
+          style="width: 100%;
+          height: 600px;"
+          data-markers="<%= @markers.to_json %>"
+          data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+        ></div>
+    </div>
   </div>
 
-  <div class="description-container">
-    <p class="links_text_pages_p"><%= @item.address %></p>
-    <h4>Description</h4>
-    <p><%= @item.description %></p>
-    <% if humanized_money(@item.price).to_i == 0 %>
-      <p>Item is free to collect once the owner has accepted your reservation</p>
-    <% elsif %>
-      <p>Deposit required: £<%= humanized_money(@item.price) %></p>
-    <% end %>
-  </div>
+
   <hr>
 </div>
 
-
-
-  <div
-    id="map"
-    style="width: 100%;
-    height: 600px;"
-    data-markers="<%= @markers.to_json %>"
-    data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-  ></div>
+<% unless @item.user == current_user %>
+  <% if humanized_money(@item.price).to_i == 0 %>
+    <%= simple_form_for @order do |f| %>
+      <%= f.input :item_id, as: :hidden, input_html: { value: @item.id } %>
+      <%= submit_tag 'Reserve Item with owner', class: 'btn btn-primary' %>
+    <% end %>
+  <% else %>
+    <%= simple_form_for @order do |f| %>
+    <p><strong>How long would you like to borrow the item for?</strong></p>
+    <%= f.input :item_id, as: :hidden, input_html: { value: @item.id } %>
+    <%= f.input :start_time, as: :string, required: false, input_html: {class: "datepicker"} %>
+    <%= f.input :end_time, as: :string, required: false, input_html: {class: "datepicker"} %>
+    <%= submit_tag 'Reserve item & pay deposit', class: 'btn btn-primary' %>
+    <% end %>
+  <% end %>
+<% end %>
 
   <hr>
   <br>
