--- a/app/assets/stylesheets/pages/_user_home.scss
+++ b/app/assets/stylesheets/pages/_user_home.scss
@@ -49,4 +49,6 @@
     text-align: center;
     border-left: 1px solid #ccc;
     background-color: #fff;
+    line-height: 50px;
+    font-size: 24px;
 }
